--- a/index.html
+++ b/index.html
@@ -4,8 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Branch en Git</title>
+    <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
-    <h1>Aprendiendo a ramificar en Git</h1>
+    <h1>Aprendiendo a ramificar en Git desde la rama principal</h1>
+    <ol>
+      <li>list item 1</li>
+      <li>list item 2</li>
+      <li>list item 3</li>
+      <li>list item 4</li>
+      <li>list item 5</li>
+    </ol>
   </body>
 </html>
