unordered list added to index.html

--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Branch en Git</title>
   </head>
   <body>
-    <h1>Aprendiendo a ramificar en Git</h1>
+    <h1>Aprendiendo a ramificar en Git desde la rama html</h1>
+    <ul>
+      <li>list item 1</li>
+      <li>list item 2</li>
+      <li>list item 3</li>
+      <li>list item 4</li>
+      <li>list item 5</li>
+    </ul>
   </body>
 </html>
