--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <li>list item 4</li>
       <li>list item 5</li>
     </ol>
+    <ul>
+      <li>Spring</li>
+      <li>Summer</li>
+      <li>Fall</li>
+      <li>Winter</li>
+    </ul>
     <script src="main.js"></script>
   </body>
 </html>
